--- a/public/index.html
+++ b/public/index.html
@@ -1,101 +1,163 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Bot Panel</title>
 </head>
+
 <body>
-    <h1>Bot Admin</h1>
+    <h1>Laby Bot</h1>
 
-    <p id="status">Chargement...</p>
-
+    <p id="botStatus">Statut : Chargement...</p>
     <button onclick="startBot()">Démarrer</button>
     <button onclick="stopBot()">Arrêter</button>
     <button onclick="restartBot()">Redémarrer</button>
+    <p id="botRoomInfos">Infos la salle : Chargement...</p>
+    <p id="characters">Personnages : Chargement...</p>
+    <p id="map">Map : Chargement...</p>
 
-    <h2>Configuration</h2>
-    <form onsubmit="updateConfig(event)">
-        <label>
-            Carte :
-            <input id="map" type="text" />
-        </label><br/>
-        <label>
-            Mode de jeu :
-            <input id="mode" type="text" />
-        </label><br/>
-        <button type="submit">Appliquer</button>
-    </form>
+    <h2>Game</h2>
+    <p id="gameStatus">Statut : Chargement...</p>
+    <button onclick="startGame()">Démarrer</button>
+    <button onclick="stopGame()">Arrêter</button>
+    <button onclick="restartGame()">Redémarrer</button>
+
+    <h1>Bot Data</h1>
+    <h2>Bot room data</h2>
+    <pre id="botData">No data yet.</pre>
 
     <script>
         async function fetchStatus() {
             try {
-                const res = await fetch('/bots');
+                const res = await fetch('/bot/0/status');
                 if (!res.ok) throw new Error('Erreur lors de la récupération du statut');
                 const data = await res.json();
-                document.getElementById('status').innerText = 
-                    `Statut : ${data.running ? 'En ligne' : 'Hors ligne'} | Carte : ${data.config.map || 'N/A'} | Mode : ${data.config.gameMode || 'N/A'}`;
+                document.getElementById('botStatus').innerText =
+                    `${data.connected ? 'En ligne' : 'Hors ligne'} : ${data.botName} (${data.botNumber})`;
 
-                document.getElementById('map').value = data.config.map || '';
-                document.getElementById('mode').value = data.config.gameMode || '';
+                document.getElementById('botRoomInfos').innerText =
+                    `Salle : ${data.roomData.Name || 'N/A'}\n(Zone : ${data.roomData.Space}, Type : ${data.roomData.MapData.Type}) \
+                    \n\nPrivate : ${data.roomData.Private || 'N/A'} | Locked : ${data.roomData.Locked}\
+                    \nVisibility : ${data.roomData.Visibility.join('/')} | Access : ${data.roomData.Access.join('/')}\
+                    \n\n Admins : [${data.roomData.Admin}]`;
+
+                let charactersString = [];
+                for (character of data.roomData.Character) {
+                    charactersString.push(` - ${character.Name} (${character.MemberNumber})`);
+                }
+                document.getElementById('characters').innerText = `Personnages dans la salle (${data.playerCount}/${data.roomData.Limit}) :\
+                \n${charactersString.join("\n")}`;
+
+                document.getElementById('map').innerText = 'Map :\n' + data.roomMap;
+
+                document.getElementById('gameStatus').innerText = `Jeu (${data.connected ? 'Actif' : 'Inactif'}) : ${data.game || 'N/A'} [${data.gameName || ''}]`;
+
+                document.getElementById('botData').innerText = `${JSON.stringify(data.roomData,null,2)}`;
+                
+                //roomData: API_Chatroom_Data = JSON.parse(JSON.stringify(this.connector?.chatRoom?.roomData));
+
             } catch (error) {
-                console.error(error);
-                document.getElementById('status').innerText = 'Erreur lors du chargement du statut.';
+                logger.error(error);
+                document.getElementById('botStatus').innerText = 'Erreur lors du chargement du statut.';
             }
         }
 
         async function startBot() {
             try {
-                const res = await fetch('/start-bot', { 
-                    method: 'POST', 
+                const res = await fetch('/bot/0/start', {
+                    method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ botId: 0 }) 
+                    body: JSON.stringify({ botId: 0 })
                 });
                 if (!res.ok) throw new Error('Erreur lors du démarrage du bot');
                 fetchStatus();
             } catch (error) {
-                console.error(error);
+                logger.error(error);
             }
         }
 
         async function stopBot() {
             try {
-                const res = await fetch('/stop-bot', { 
-                    method: 'POST', 
+                const res = await fetch('/bot/0/stop', {
+                    method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ botId: 0 }) 
+                    body: JSON.stringify({ botId: 0 })
                 });
                 if (!res.ok) throw new Error('Erreur lors de l\'arrêt du bot');
                 fetchStatus();
             } catch (error) {
-                console.error(error);
+                logger.error(error);
             }
         }
+
 
         async function restartBot() {
             await stopBot();
             await startBot();
         }
 
-        async function updateConfig(event) {
-            event.preventDefault();
+        async function startGame() {
             try {
-                const map = document.getElementById('map').value;
-                const mode = document.getElementById('mode').value;
-                const res = await fetch('/update-config', {
+                const res = await fetch('/bot/0/game/start', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ map, gameMode: mode })
+                    body: JSON.stringify({ botId: 0 })
                 });
-                if (!res.ok) throw new Error('Erreur lors de la mise à jour de la configuration');
+                if (!res.ok) throw new Error('Erreur lors du démarrage du bot');
                 fetchStatus();
             } catch (error) {
-                console.error(error);
+                logger.error(error);
+            }
+        }
+
+        async function stopGame() {
+            try {
+                const res = await fetch('/bot/0/game/stop', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ botId: 0 })
+                });
+                if (!res.ok) throw new Error('Erreur lors de l\'arrêt du bot');
+                fetchStatus();
+            } catch (error) {
+                logger.error(error);
+            }
+        }
+
+        async function restartGame() {
+            await stopGame();
+            await startGame();
+        }
+
+        async function getBotConfig() {
+            try {
+                const res = await fetch('/bot/0/config');
+                if (!res.ok) throw new Error('Erreur lors de la récupération de la configuration');
+                const data = await res.json();
+                document.getElementById('botConfig').innerText = JSON.stringify(data, null, 2);
+            } catch (error) {
+                logger.error(error);
+                document.getElementById('botConfig').innerText = 'Erreur lors du chargement de la configuration.';
+            }
+        }
+
+        async function getBotData() {
+            try {
+                const res = await fetch('/bot/0/data');
+                if (!res.ok) throw new Error('Erreur lors de la récupération des données');
+                const data = await res.json();
+                document.getElementById('botData').innerText = JSON.stringify(data, null, 2);
+            } catch (error) {
+                logger.error(error);
+                document.getElementById('botData').innerText = 'Erreur lors du chargement des données.';
             }
         }
 
         fetchStatus();
-        setInterval(fetchStatus, 5000);
+        setInterval(fetchStatus, 1000);
     </script>
 </body>
+
 </html>
